# kanji

./: .gitignore  CMakeLists.txt  README.md
KanjiCore/: CMakeLists.txt  KanjiCoreConfig.cmake.in  japanese_text_utils.cpp  japanese_text_utils.h  kanji_database.cpp  kanji_database.h
KanjiGUI/: CMakeLists.txt  kanji_learning_window.cpp  kanji_learning_window.h  kanji_main.cpp  kanji_main_window.cpp  kanji_main_window.h
KanjiGUI/assets/sprites/: README.txt
